--- a/index.html
+++ b/index.html
@@ -4,8 +4,72 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,600;1,300;1,600&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="style.css" />
+
     <title>Social Tree</title>
   </head>
-  <body></body>
+  <body>
+    <main>
+      <div class="container">
+        <div class="avatar">
+          <img
+            id="userImage"
+            src="https://images.unsplash.com/photo-1548142813-c348350df52b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=389&q=80"
+            alt="Foto do usuário"
+          />
+        </div>
+
+        <ul id="pages">
+          <li class="link-1">
+            <a href="#" target target="_blank">LINK 1</a>
+          </li>
+          <li class="link-2">
+            <a href="#" target target="_blank">LINK 2</a>
+          </li>
+          <li class="link-3">
+            <a href="#" target target="_blank">LINK 3</a>
+          </li>
+          <li class="link-4">
+            <a href="#" target target="_blank">LINK 4</a>
+          </li>
+        </ul>
+
+        <ul id="socialMediaLinks">
+          <li class="twitter">
+            <a href="http://twitter.com/" target="_blank">
+              <img src="assets/twitter.svg" alt="Ícone twitter" />
+            </a>
+          </li>
+          <li class="twich">
+            <a href="http://twich.com/" target="_blank">
+              <img src="assets/twitch.svg" alt="Ícone twich" />
+            </a>
+          </li>
+          <li class="instagram">
+            <a href="http://instagram.com/" target="_blank">
+              <img src="assets/instagram.svg" alt="Ícone instagram" />
+            </a>
+          </li>
+          <li class="linkedin">
+            <a href="http://linkedin.com/" target="_blank">
+              <img src="assets/linkedin.svg" alt="Ícone linkedin" />
+            </a>
+          </li>
+          <li class="github">
+            <a href="http://github.com/" target="_blank">
+              <img src="assets/github.svg" alt="Ícone github" />
+            </a>
+          </li>
+        </ul>
+      </div>
+    </main>
+  </body>
 </html>
