--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
         </div>
 
         <ul id="pages">
-          <li class="link-1">
-            <a href="#" target target="_blank">LINK 1</a>
+          <li class="pagesLink">
+            <a class="link1" href="#" target target="_blank">LINK 1</a>
           </li>
-          <li class="link-2">
-            <a href="#" target target="_blank">LINK 2</a>
+          <li class="pagesLink">
+            <a class="link2" href="#" target target="_blank">LINK 2</a>
           </li>
-          <li class="link-3">
-            <a href="#" target target="_blank">LINK 3</a>
+          <li class="pagesLink">
+            <a class="link3" href="#" target target="_blank">LINK 3</a>
           </li>
-          <li class="link-4">
-            <a href="#" target target="_blank">LINK 4</a>
+          <li class="pagesLink">
+            <a class="link4" href="#" target target="_blank">LINK 4</a>
           </li>
         </ul>
 
